fix navbar overflow for small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,7 @@ body {
    
 .navContainer ul {
     float: right;
+    overflow:none;
     padding-top: 15px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -97,22 +98,21 @@ body {
    border-top-color: #cccccc;
    border-style: solid;
    border-width: 1.5px 0px 0px 0px;
-
+   
 }
 
 .contentArea {
-   width: 960px;
+   max-width: 960px;
    margin: 0 auto;
    overflow: auto;
    padding: 30px;
    margin-top: 50px;
    /*  note to self: not setting a height allows page to move with content */
-   height: 650px;  
+   height: 650px;
    background-color: #ffffff;
    border-color: #dddddd;
    border-style: solid;
    border-width: 1px 1px 1px 1px;
-   
 }
 
 .contentHeader {
@@ -201,7 +201,7 @@ left: 0;
 bottom: 0;
 line-height: 65px;
 height: 50px;
-/* z-index: 4; */
+
 }
 
  /**
@@ -350,13 +350,13 @@ text-align: center;
     }
 
     .navSect1 {
-      width: 30%;
+      overflow: none;
       clear: both;
      
     }
 
     .navSect2 {
-       width: 60%;
+       overflow: none;
            
     }
     
